--- a/single website.html
+++ b/single website.html
@@ -56,7 +56,7 @@
       <div id="ABOUT" ></div>
  <div>
     <div class="Ab">ABOUT</div>
-    <div class="lm">Learn More <span class="am">About Me</span></div>
+    <div class="IM">Learn More <span class="am">About Me</span></div>
     <p class="tx">I'm Adeoye Okeowo Miracle, I based in Sangotedo, Lagos State, Nigeria. I work for clients
        making their business easier and more profitable, i help clients<br> grow their online presence through unique graphics designs and inventive web solutions. If you're ready to discuss your project just get in touch with<br> me.
 
